# UAE-Government-Policy-RAG

./: .gitignore  README.md  pyproject.toml
data/: golden_set.draft.jsonl  golden_set.jsonl  golden_set.seed_log.jsonl  registry.json
data/eval_runs/baseline/: config.json  results.json  summary.md
scripts/: build_index.py  fetch_corpus.py  preview_chunks.py  run_eval.py  seed_golden.py
src/uae_rag/: __init__.py  config.py
src/uae_rag/adapters/: __init__.py
src/uae_rag/adapters/local/: __init__.py  browser_fetcher.py  embeddings.py  llm.py  reranker.py  vector_index.py
src/uae_rag/api/: main.py
src/uae_rag/evals/: __init__.py  golden.py  pipeline.py  ragas_runner.py  wrappers.py
src/uae_rag/generation/: __init__.py  answer.py  citations.py  language.py  prompts.py
src/uae_rag/ingestion/: __init__.py  chunker.py  parser.py  registry.py
src/uae_rag/ports/: __init__.py  embeddings.py  llm.py  reranker.py  retrieval.py  vector_index.py
src/uae_rag/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  multi_query.py  rerank.py
tests/e2e/: conftest.py  test_query_pipeline.py  test_skeleton.py  test_streamlit_ui.py
tests/fitness/: test_layer_boundaries.py
tests/integration/: __init__.py  test_generation_pipeline.py  test_hybrid_retrieval.py  test_local_embeddings.py  test_local_vector_index.py  test_ragas_evaluation.py  test_rerank_pipeline.py
tests/unit/: test_api_citations.py  test_bm25.py  test_chunker.py  test_embeddings_port.py  test_evals.py  test_generation.py  test_golden_set.py  test_hybrid.py  test_llm_port.py  test_multi_query.py  test_parser.py  test_registry.py  test_rerank.py  test_reranker_port.py  test_retrieval_port.py  test_ui_api_client.py  test_vector_index_port.py
ui/: api_client.py  streamlit_app.py
