[project]
name = "uae-rag"
version = "0.0.1"
description = "Retrieval-augmented QA over UAE government policy documents"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pdfplumber>=0.11.9",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",
    "numpy>=2.4.6",
    "rank-bm25>=0.2.2",
    "ollama>=0.4.0",
    "lingua-language-detector>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "ragas>=0.2",
    "datasets>=3",
    "matplotlib>=3.9",
]
fetch = [
    "playwright>=1.40",
]
ui = [
    "streamlit>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uae_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "ui"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (run with --runslow)",
    "adapter_local: requires local adapters (Ollama, ChromaDB)",
    "adapter_azure: requires Azure credentials in env",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "SIM",            # simplify
    "RUF",
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
# Intentional Arabic codepoints in source and tests — ambiguity warnings are noise here.
"src/uae_rag/ingestion/parser.py" = ["RUF001"]
"tests/unit/test_parser.py" = ["RUF001", "RUF003"]
